--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+.flex-row{
+  display: flex;
+  width: 150px;
+  height: 25px;
+  flex-direction: row;
+}
